--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "4.1.3",
+    "jquery": "3.3.1",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-scripts": "2.0.3"
+    "react-redux": "5.1.1",
+    "react-scripts": "2.0.3",
+    "reactstrap": "6.5.0",
+    "redux": "4.0.1",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {},
   "scripts": {
