--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap": "4.1.3",
     "jquery": "3.3.1",
+    "ramda": "0.26.0",
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-redux": "5.1.1",
