--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "4.3.1",
-    "jquery": "3.3.1",
-    "ramda": "0.26.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-redux": "5.1.1",
-    "react-scripts": "2.0.3",
-    "reactstrap": "6.5.0",
-    "redux": "4.0.1",
+    "jquery": "3.4.1",
+    "ramda": "0.26.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.1.0",
+    "react-scripts": "3.0.1",
+    "reactstrap": "8.0.1",
+    "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "3.3.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
