--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "bootstrap": "4.3.1",
+    "react-force-graph": "1.27.1",
+    "semantic-ui-react": "0.88.1",
+    "semantic-ui-css": "2.4.1",
     "jquery": "3.4.1",
     "ramda": "0.26.1",
     "react": "16.8.6",
